--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.no-scroll::-webkit-scrollbar {
+/* .no-scroll::-webkit-scrollbar {
   display: none;
   width: 0;
-}
+} */
